--- a/app/src/main/res/layout/custom_toolbar_auth.xml
+++ b/app/src/main/res/layout/custom_toolbar_auth.xml
@@ -5,6 +5,7 @@
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    app:layout_scrollFlags="scroll|enterAlways"
     android:background="@color/app_main_color"
     android:elevation="6dp"
     app:contentInsetStart="0dp">
@@ -15,10 +16,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:fontFamily="@font/encore_font_circular_book"
+        android:fontFamily="@font/commons_bold"
         android:textColor="@color/white"
-        android:textSize="20sp"
-        android:textStyle="bold"
+        android:textSize="22sp"
         tools:text="@string/authorization" />
 
 
