--- a/app/src/main/res/layout/fragment_change_name.xml
+++ b/app/src/main/res/layout/fragment_change_name.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@color/main_background"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
@@ -12,59 +14,56 @@
         android:layout_height="wrap_content"
         android:background="@color/app_main_color">
 
-        <com.google.android.material.appbar.MaterialToolbar
-            android:id="@+id/change_name_toolbar"
-            style="@style/Widget.MaterialComponents.Toolbar"
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
+            android:layout_height="50dp"
             android:background="@color/app_main_color"
-            android:baselineAligned="false"
-            android:elevation="10dp"
-            app:layout_collapseMode="parallax"
-            app:popupTheme="@style/Widget.MaterialComponents.Toolbar.Primary"
-            app:titleTextColor="@color/white">
+            android:elevation="6dp"
+            app:contentInsetStart="0dp"
+            app:navigationIcon="@drawable/ic_back">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/custom_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:fontFamily="@font/commons_bold"
+                    android:textColor="@color/white"
+                    android:textSize="22sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:text="Изменить имя" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
 
             <ImageView
-                android:layout_marginRight="15dp"
-                android:layout_gravity="right"
                 android:id="@+id/iv_done"
-                android:layout_width="25dp"
-                android:layout_height="25dp"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_gravity="right"
+                android:layout_marginEnd="15dp"
                 android:clickable="true"
+                android:focusable="true"
                 android:foreground="?android:attr/selectableItemBackground"
-                android:src="@drawable/ic_done"
-                android:contentDescription="TODO"
-                android:focusable="true" />
+                android:src="@drawable/ic_done" />
 
-        </com.google.android.material.appbar.MaterialToolbar>
+        </androidx.appcompat.widget.Toolbar>
     </com.google.android.material.appbar.AppBarLayout>
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5mm"
+        android:layout_marginTop="25dp"
         android:orientation="vertical"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:hint="Имя: ">
-
-           <com.google.android.material.textfield.TextInputEditText
-               android:backgroundTint="@color/app_main_color"
-               android:layout_width="55mm"
-               android:inputType="textCapWords"
-               android:textColor="@color/app_main_color"
-               android:textColorHint="@color/app_main_color"
-               android:id="@+id/et_name_change"
-               android:layout_height="wrap_content"/>
-
-        </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -74,11 +73,34 @@
             android:hint="@string/last_name">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/et_last_name_change"
-                android:layout_width="55mm"
+                android:id="@+id/et_last_name"
+                android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/app_main_color"
-                android:inputType="textCapWords"
+                android:fontFamily="@font/commons_regular"
+                android:inputType="textCapSentences"
+                android:textSize="16sp"
+                android:textColor="@color/app_main_color"
+                android:textColorHint="@color/app_main_color" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:hint="Имя: ">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/et_name"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/app_main_color"
+                android:fontFamily="@font/commons_regular"
+                android:inputType="textCapSentences"
+                android:textSize="16sp"
                 android:textColor="@color/app_main_color"
                 android:textColorHint="@color/app_main_color" />
 
