--- a/app/src/main/res/layout/page_item.xml
+++ b/app/src/main/res/layout/page_item.xml
@@ -7,6 +7,7 @@
 
 
     <ImageView
+        android:src="@drawable/placeholder"
         android:id="@+id/iv_paging_images"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
