--- a/app/src/main/res/layout/fragment_work.xml
+++ b/app/src/main/res/layout/fragment_work.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:ads="http://schemas.android.com/apk/res-auto"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -20,117 +19,13 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <androidx.core.widget.NestedScrollView
-        android:id="@+id/nestedScrollView"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_list_notes"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        ads:layout_behavior="@string/appbar_scrolling_view_behavior">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-
-            <HorizontalScrollView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:scrollbarThumbHorizontal="@null"
-                android:scrollbarThumbVertical="@null">
-
-                <ScrollView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:scrollbarThumbHorizontal="@null"
-                    android:scrollbarThumbVertical="@null">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="12dp"
-                        android:paddingTop="5dp"
-                        android:paddingBottom="5dp">
-
-                        <androidx.appcompat.widget.AppCompatButton
-                            android:id="@+id/btn_tag_first"
-                            android:layout_width="120dp"
-                            android:layout_height="35dp"
-                            android:layout_marginStart="10dp"
-                            android:background="@drawable/tag_background"
-                            android:fontFamily="@font/commons_demi_bold"
-                            android:text="@string/short_time_work"
-                            android:textAllCaps="false"
-                            android:textColor="@android:color/white"
-                            android:textSize="18sp" />
-
-                        <androidx.appcompat.widget.AppCompatButton
-                            android:id="@+id/btn_tag_second"
-                            android:layout_width="110dp"
-                            android:layout_height="35dp"
-                            android:layout_marginStart="10dp"
-                            android:background="@drawable/tag_background"
-                            android:fontFamily="@font/commons_demi_bold"
-                            android:text="Халтура"
-                            android:textAllCaps="false"
-                            android:textColor="@android:color/white"
-                            android:textSize="18sp" />
-
-                        <androidx.appcompat.widget.AppCompatButton
-                            android:id="@+id/btn_tag_third"
-                            android:layout_width="170dp"
-                            android:layout_height="35dp"
-                            android:layout_marginStart="10dp"
-                            android:background="@drawable/tag_background"
-                            android:fontFamily="@font/commons_demi_bold"
-                            android:text="@string/full_work"
-                            android:textAllCaps="false"
-                            android:textColor="@android:color/white"
-                            android:textSize="18sp" />
-
-                        <androidx.appcompat.widget.AppCompatButton
-                            android:id="@+id/btn_tag_fourth"
-                            android:layout_width="115dp"
-                            android:layout_height="35dp"
-                            android:layout_marginStart="10dp"
-                            android:layout_marginEnd="10dp"
-                            android:background="@drawable/tag_background"
-                            android:fontFamily="@font/commons_demi_bold"
-                            android:text="@string/looking_for_work"
-                            android:textAllCaps="false"
-                            android:textColor="@android:color/white"
-                            android:textSize="18sp" />
-
-                    </LinearLayout>
-                </ScrollView>
-            </HorizontalScrollView>
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/rv_list_notes"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginRight="5dp"
-                    android:layout_marginBottom="70dp"
-                    android:overScrollMode="never"
-                    android:scrollbars="none" />
-
-                <ProgressBar
-                    android:id="@+id/progressbar"
-                    style="@style/CircularProgress"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginTop="100dp"
-                    android:indeterminateTint="#411E80" />
-
-
-            </RelativeLayout>
-        </LinearLayout>
-    </androidx.core.widget.NestedScrollView>
+        android:layout_height="match_parent"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginBottom="70dp"
+        android:overScrollMode="never"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
