--- a/app/src/main/res/layout/custom_toolbar_auth.xml
+++ b/app/src/main/res/layout/custom_toolbar_auth.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="50dp"
     app:layout_scrollFlags="scroll|enterAlways"
     android:background="@color/app_main_color"
     android:elevation="6dp"
