--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -2,6 +2,7 @@
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:orientation="vertical"
     android:layout_height="match_parent"
     android:background="@color/main_background">
 
@@ -18,7 +19,6 @@
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/nested_scroll_view"
-        android:overScrollMode="never"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
@@ -78,17 +78,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/recycler_view"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginRight="5dp"
-                    android:layout_marginBottom="70dp"
-                    android:overScrollMode="never"
-                    android:scrollbars="none" />
+
 
                 <ProgressBar
+                    android:visibility="invisible"
                     android:layout_marginTop="50dp"
                     android:id="@+id/progressbar"
                     style="@style/CircularProgress"
@@ -103,5 +96,12 @@
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_marginTop="250dp"
+        android:id="@+id/recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
