--- a/app/src/main/res/layout/custom_toolbar_search.xml
+++ b/app/src/main/res/layout/custom_toolbar_search.xml
@@ -3,73 +3,157 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
-    android:layout_height="?attr/actionBarSize"
-    app:contentInsetStart="15dp"
-    app:layout_scrollFlags="scroll|enterAlways"
+    android:layout_height="wrap_content"
     android:elevation="6dp"
-    app:collapseIcon="@drawable/ic_back">
-
-    <androidx.cardview.widget.CardView
-        app:cardBackgroundColor="@color/main_background"
-        android:id="@+id/btn_search"
-        android:layout_width="290dp"
-        android:layout_height="wrap_content"
-        android:clickable="true"
-        android:focusable="true"
-        app:cardCornerRadius="7dp">
-
-        <ImageView
-            android:layout_width="15dp"
-            android:layout_height="15dp"
-            android:layout_gravity="left"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="14dp"
-            android:clickable="true"
-            android:focusable="true"
-            android:foreground="?android:attr/selectableItemBackground"
-            android:src="@drawable/icon_search" />
+    app:contentInsetStart="0dp"
+    app:layout_scrollFlags="scroll|enterAlways|snap">
 
 
-        <EditText
-            android:layout_marginTop="2dp"
-            android:layout_marginStart="35dp"
-            android:id="@+id/et_search"
-            android:layout_width="220dp"
-            android:layout_height="40dp"
-            android:background="@android:color/transparent"
-            android:backgroundTint="@color/app_main_color"
-            android:hint="@string/search"
-            android:fontFamily="@font/commons_regular"
-            android:imeOptions="actionSearch"
-            android:inputType="textCapWords"
-            android:textColor="@color/black"
-            android:textCursorDrawable="@drawable/cursor_color"
-            android:textSize="16sp" />
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/iv_clear"
-            android:layout_width="15dp"
-            android:layout_height="15dp"
-            android:layout_gravity="right"
-            android:layout_marginTop="14dp"
-            android:layout_marginEnd="10dp"
-            android:clickable="true"
-            android:focusable="true"
-            android:foreground="?android:attr/selectableItemBackground"
-            android:src="@drawable/ic_clear" />
-    </androidx.cardview.widget.CardView>
+        <LinearLayout
+            android:layout_marginTop="5dp"
+            android:layout_marginStart="15dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/btn_search"
+                android:layout_width="290dp"
+                android:layout_height="wrap_content"
+                android:clickable="true"
+                android:focusable="true"
+                app:cardBackgroundColor="@color/white"
+                app:cardCornerRadius="4dp">
+
+                <ImageView
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
+                    android:layout_gravity="left"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="14dp"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:foreground="?android:attr/selectableItemBackground"
+                    android:src="@drawable/icon_search" />
 
 
-    <ImageView
-        android:id="@+id/iv_filter"
-        android:layout_width="35dp"
-        android:layout_height="35dp"
-        android:layout_gravity="right"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="10dp"
-        android:clickable="true"
-        android:focusable="true"
-        android:foreground="?android:attr/selectableItemBackground"
-        android:src="@drawable/ic_filter" />
+                <EditText
+                    android:id="@+id/et_search"
+                    android:layout_width="220dp"
+                    android:layout_height="40dp"
+                    android:layout_marginStart="35dp"
+                    android:layout_marginTop="2dp"
+                    android:background="@android:color/transparent"
+                    android:backgroundTint="@color/app_main_color"
+                    android:fontFamily="@font/commons_regular"
+                    android:hint="@string/search"
+                    android:imeOptions="actionSearch"
+                    android:inputType="textCapWords"
+                    android:textColor="@color/black"
+                    android:textCursorDrawable="@drawable/cursor_color"
+                    android:textSize="16sp" />
+
+                <ImageView
+                    android:id="@+id/iv_clear"
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
+                    android:layout_gravity="right"
+                    android:layout_marginTop="14dp"
+                    android:layout_marginEnd="10dp"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:foreground="?android:attr/selectableItemBackground"
+                    android:src="@drawable/ic_clear" />
+            </androidx.cardview.widget.CardView>
+
+            <ImageView
+                android:id="@+id/iv_filter"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginEnd="10dp"
+                android:clickable="true"
+                android:focusable="true"
+                android:foreground="?android:attr/selectableItemBackground"
+                android:src="@drawable/ic_filter" />
+
+        </LinearLayout>
+
+
+        <HorizontalScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:overScrollMode="never"
+            android:scrollbarThumbHorizontal="@null"
+            android:scrollbarThumbVertical="@null">
+
+            <ScrollView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:overScrollMode="never"
+                android:scrollbarThumbHorizontal="@null"
+                android:scrollbarThumbVertical="@null">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:paddingTop="5dp"
+                    android:paddingBottom="5dp">
+
+                    <androidx.appcompat.widget.AppCompatButton
+                        android:id="@+id/btn_tag_first"
+                        android:layout_width="150dp"
+                        android:layout_height="35dp"
+                        android:layout_marginStart="10dp"
+                        android:background="@drawable/tag_background"
+                        android:fontFamily="@font/commons_demi_bold"
+                        android:text="Грузоперевозки"
+                        android:textAllCaps="false"
+                        android:textColor="@color/app_main_color"
+                        android:textSize="18sp" />
+
+                    <androidx.appcompat.widget.AppCompatButton
+                        android:id="@+id/btn_tag_second"
+                        android:layout_width="120dp"
+                        android:layout_height="35dp"
+                        android:layout_marginStart="10dp"
+                        android:background="@drawable/tag_background"
+                        android:fontFamily="@font/commons_demi_bold"
+                        android:text="Автомобиль"
+                        android:textAllCaps="false"
+                        android:textColor="@color/app_main_color"
+                        android:textSize="18sp" />
+
+                    <androidx.appcompat.widget.AppCompatButton
+                        android:id="@+id/btn_tag_third"
+                        android:layout_width="140dp"
+                        android:layout_height="35dp"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginEnd="10dp"
+                        android:background="@drawable/tag_background"
+                        android:fontFamily="@font/commons_demi_bold"
+                        android:text="Выезд / Заезд"
+                        android:textAllCaps="false"
+                        android:textColor="@color/app_main_color"
+                        android:textSize="18sp" />
+                </LinearLayout>
+
+            </ScrollView>
+        </HorizontalScrollView>
+
+
+    </LinearLayout>
+
+
+
+
+
+
 
 </androidx.appcompat.widget.Toolbar>
