--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -96,8 +96,27 @@
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
-    <androidx.recyclerview.widget.RecyclerView
+    <LinearLayout
+        android:id="@+id/animationView"
+        android:gravity="center"
+        android:background="@drawable/loading_background"
         android:layout_marginTop="250dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_width="100dp"
+        android:layout_height="50dp">
+
+        <com.airbnb.lottie.LottieAnimationView
+            android:layout_width="100dp"
+            app:lottie_speed="2"
+            android:layout_height="100dp"
+            app:lottie_rawRes="@raw/infinity_line_anim"
+            app:lottie_autoPlay="true"
+            app:lottie_loop="true"/>
+
+    </LinearLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
